--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="left"></div>
+    <div class="right"></div>
 </body>
 </html>
