some placement work

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="left"></div>
-    <div class="right"></div>
+    <div id="container">
+        <div class="left">
+            <div class="background-image"><img class="bg-img" src="halie-west-25xggax4bSA-unsplash.jpg" alt="backdrop"></div>
+            <div class="bar"></div>
+            <p class="credits">Photo by Hailie West on Unsplash</p>
+        </div>
+        <div class="right">
+            <div class="top">
+                <div class="para">
+                    <p class="p1">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
+                    <p class="p2">You know what you want</p>
+                </div>
+            </div>
+            <div class="middle">
+
+            </div>
+            <div class="bottom">
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
