--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div class="left">
             <div class="background-image"><img class="bg-img" src="halie-west-25xggax4bSA-unsplash.jpg" alt="backdrop"></div>
-            <div class="bar"></div>
+            <div class="bar">FORM</div>
             <p class="credits">Photo by Hailie West on Unsplash</p>
         </div>
         <div class="right">
@@ -21,10 +21,47 @@
                 </div>
             </div>
             <div class="middle">
-
+                <p>Let's do this!</p>
+                <div class="forms">
+                    <form action="" method="get">
+                        <div class="first-line">
+                            <div class="stack-1">
+                                <label for="first_name">FIRST NAME</label>
+                                <input type="text" id="first_name">
+                            </div>
+                            <div class="stack-2">
+                                <label for="last_name">LAST NAME</label>
+                                <input type="text" id="last_name">
+                            </div>
+                        </div>
+                        <div class="second-line">
+                            <div class="stack-3">
+                                <label for="email-id">EMAIL</label>
+                                <input type="mail" id="email-id">
+                            </div>
+                            <div class="stack-4">
+                                <label for="phone">PHONE NUMBER</label>
+                                <input type="text" id="phone">
+                            </div>
+                        </div>
+                        <div class="third-line">
+                            <div class="stack-5">
+                                <label for="pwd">PASSWORD</label>
+                                <input type="password" id="pwd">
+                            </div>
+                            <div class="stack-6">
+                                <label for="pwd-conf">CONFIRM PASSWORD</label>
+                                <input type="password" id="pwd-conf">
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
             <div class="bottom">
-                
+                <div class="acc">
+                    <button type="submit">Create Account</button>
+                    <p class="log">Already have an account? <span>Log in</span></p>
+                </div>
             </div>
         </div>
     </div>
